--- a/.config/i3/config
+++ b/.config/i3/config
@@ -169,9 +169,9 @@ bindsym $mod+o resize grow width     10 px or 2 ppt
 workspace_layout default
 
 set $ws1 "1: "
-set $ws2 "2: -"
-set $ws3 "3: -"
-set $ws4 "4: -"
+set $ws2 "2: 2"
+set $ws3 "3: 3"
+set $ws4 "4: 4"
 set $ws5 "5: "
 set $ws6 "6: "
 set $ws7 "7: -"
